--- a/app/src/main/res/layout/activity_play_detail.xml
+++ b/app/src/main/res/layout/activity_play_detail.xml
@@ -24,7 +24,7 @@
                     android:layout_marginTop="3dp"
                     android:maxLines="1"
                     android:ellipsize="end"
-                    android:textColor="@color/colorWhite"
+                    android:textColor="@color/activity_play_detail_toolbar_title"
                     android:textSize="20sp"
                     android:layout_height="wrap_content"/>
 
