--- a/app/src/main/res/layout/toolbar_common.xml
+++ b/app/src/main/res/layout/toolbar_common.xml
@@ -15,8 +15,8 @@
             android:background="@drawable/toolbar_common_background"
             android:fitsSystemWindows="true"
             app:navigationIcon="@drawable/toolbar_common_ic_back"
-            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-            app:theme="@style/ThemeOverlay.AppCompat.Light"/>
+            app:popupTheme="@style/ThemeOverlay.AppCompat.DayNight"
+            app:theme="@style/ThemeOverlay.AppCompat.DayNight"/>
     <View
             android:background="@color/imageview_common_grey_place_holder"
             android:layout_width="match_parent"
