--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -4,20 +4,21 @@
     <color name="colorPrimaryDark">#000000</color>
     <color name="colorAccent">#D81B60</color>
     <color name="activity_song_list_background">#d7d2cb</color>
-    <color name="text_common_black">#ffffff</color>
+    <color name="text_common_black">#7e7f81</color>
     <color name="activity_play_detail_background">#211505</color>
     <color name="colorWhite">#000000</color>
     <color name="colorGrey">#817c78</color>
-    <color name="imageview_common_grey_place_holder">#f5f5f5</color>
+    <color name="imageview_common_grey_place_holder">#17181a</color>
     <color name="activity_list_detail_background">#59302e</color>
     <color name="dialog_bottom_song_list_view_divide">#17181a</color>
     <color name="activity_playing_seekbar">#8f8b8c</color>
     <color name="activity_playing_seekbar_second">#585858</color>
-    <color name="text_common_black_l">#191919</color>
+    <color name="text_common_black_l">#7e7f81</color>
     <color name="activity_splash_red_background">#dc2c1f</color>
     <color name="fragment_discovery_red">#fe2424</color>
 
-    <color name="background_common">#000000</color>
+
+
 
 
 
@@ -25,4 +26,16 @@
     <color name="translucent_scrim_top_center">#0C000000</color>
     <color name="translucent_scrim_bottom">#2A000000</color>
     <color name="translucent_scrim_bottom_center">#0D000000</color>
+
+    <!--夜间模式-->
+    <color name="text_night_mode">#7e7f81</color>
+    <color name="background_common">#000000</color>
+
+    <!--listDetailActivity-->
+    <color name="activity_list_detail_banner_background">#463837</color>
+    <color name="activity_list_detail_banner_title">#b1abac</color>
+    <color name="accent_day_black">#ffffff</color>
+    <color name="accent_day_white">#000000</color>
+
+
 </resources>
