--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,6 +6,8 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:colorBackground">@color/background_common</item>
+        <item name="android:textColor" >@color/text_night_mode</item>
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
     </style>
