--- a/app/src/main/res/layout/fragment_my.xml
+++ b/app/src/main/res/layout/fragment_my.xml
@@ -128,6 +128,7 @@
     </LinearLayout>
 
     <LinearLayout
+            android:id="@+id/ll_collect_song_list"
             android:orientation="horizontal"
             android:layout_width="wrap_content"
             android:layout_height="51dp">
