--- a/app/src/main/res/layout/recycle_item_activity_csl_common.xml
+++ b/app/src/main/res/layout/recycle_item_activity_csl_common.xml
@@ -2,27 +2,28 @@
 <RelativeLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:orientation="vertical"
+        android:background="@color/accent_always_white"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
-            android:id="@+id/cv_search_song_list"
+            android:id="@+id/cv_csl_song_list"
             android:layout_alignParentTop="true"
             android:layout_alignParentStart="true"
             android:layout_width="128dp"
             android:layout_height="74dp">
         <ImageView
-                android:id="@+id/iv_search_song_list"
+                android:id="@+id/iv_csl_song_list"
                 android:scaleType="centerCrop"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"/>
     </androidx.cardview.widget.CardView>
 
     <TextView
-            android:id="@+id/tv_search_song_list_title"
-            android:layout_alignTop="@id/cv_search_song_list"
+            android:id="@+id/tv_csl_song_list_title"
+            android:layout_alignTop="@id/cv_csl_song_list"
             android:layout_marginTop="25dp"
-            android:layout_toEndOf="@id/cv_search_song_list"
+            android:layout_toEndOf="@id/cv_csl_song_list"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:maxLines="2"
@@ -31,14 +32,5 @@
             android:ellipsize="end"
             android:layout_marginStart="5dp"
             android:layout_marginEnd="5dp"/>
-    <TextView
-            android:id="@+id/tv_search_song_list_artist"
-            android:layout_below="@id/tv_search_song_list_title"
-            android:layout_alignStart="@id/tv_search_song_list_title"
-            android:textSize="10sp"
-            android:textColor="@color/colorGrey"
-            android:layout_marginTop="10dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
 
 </RelativeLayout>
