--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -18,9 +18,10 @@
                 android:textSize="17dp"
                 android:imeOptions="actionSearch"
                 android:drawableEnd="@drawable/activity_search_cancel"
+                android:layout_marginStart="5dp"
                 android:backgroundTint="@color/colorGrey"
                 android:layout_width="match_parent"
-                android:layout_marginEnd="60dp"
+                android:layout_marginEnd="10dp"
                 android:layout_height="wrap_content"/>
 
     </androidx.appcompat.widget.Toolbar>
