--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
     <color name="activity_play_detail_background">#211505</color>
     <color name="colorWhite">#ffffff</color>
     <color name="colorGrey">#817c78</color>
+    <color name="activity_search_edittext_tint">#afafaf</color>
     <color name="imageview_common_grey_place_holder">#f5f5f5</color>
     <color name="activity_list_detail_background">#59302e</color>
     <color name="dialog_bottom_song_list_view_divide">#f6f6f6</color>
