--- a/app/src/main/res/layout/fragment_my.xml
+++ b/app/src/main/res/layout/fragment_my.xml
@@ -5,6 +5,7 @@
                 android:layout_height="match_parent">
 
     <LinearLayout
+            android:id="@+id/ll_song_local"
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="51dp">
