--- a/app/src/main/res/layout/recycle_item_activity_mv_play_detail.xml
+++ b/app/src/main/res/layout/recycle_item_activity_mv_play_detail.xml
@@ -9,10 +9,10 @@
     <TextView
             android:id="@+id/tv_mv_title"
             android:textColor="@color/text_common_black"
-            android:layout_alignParentEnd="true"
             android:layout_alignParentStart="true"
             android:layout_marginTop="12dp"
             android:layout_marginStart="16dp"
+            android:layout_toStartOf="@id/iv_mv_arrow"
             android:textSize="20sp"
             android:textStyle="bold"
             android:layout_width="wrap_content"
