--- a/app/src/main/res/layout/notification.xml
+++ b/app/src/main/res/layout/notification.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
-                android:layout_height="78dp">
+                android:layout_height="79dp">
 
     <ImageView
             android:id="@+id/iv_no_pic"
-            android:src="@color/text_common_black_l"
             android:layout_alignParentStart="true"
-            android:layout_width="0dp"
+            android:scaleType="centerCrop"
+            android:layout_width="90dp"
             android:layout_height="match_parent"/>
 
     <TextView
@@ -20,7 +20,7 @@
             android:layout_alignParentTop="true"
             android:layout_toEndOf="@id/iv_no_pic"
             android:textColor="@color/text_common_black"
-            android:layout_width="wrap_content"
+            android:layout_width="128dp"
             android:layout_height="wrap_content"/>
 
     <TextView
