--- a/app/src/main/res/layout/recycle_item_activity_mv_play_loading_more_footer.xml
+++ b/app/src/main/res/layout/recycle_item_activity_mv_play_loading_more_footer.xml
@@ -19,11 +19,10 @@
             android:layout_marginBottom="20dp"
             android:id="@+id/anim_text"
             android:layout_centerHorizontal="true"
-
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="努力加载中..."
-            android:textColor="#000000"
+            android:textColor="@color/colorGrey"
             android:textSize="14sp" />
 
 
