--- a/app/src/main/res/layout/recycle_item_activity_mv_play_load_end_footer.xml
+++ b/app/src/main/res/layout/recycle_item_activity_mv_play_load_end_footer.xml
@@ -5,6 +5,7 @@
               android:layout_height="wrap_content">
     <TextView
             android:text="没有更多了"
+            android:layout_gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 
