--- a/app/src/main/res/layout/recycle_item_activity_mv_play_loading_more_footer.xml
+++ b/app/src/main/res/layout/recycle_item_activity_mv_play_loading_more_footer.xml
@@ -7,8 +7,8 @@
     <ImageView
             android:layout_marginTop="20dp"
             android:layout_marginBottom="20dp"
-            android:id="@+id/anim_image"
-            android:layout_toStartOf="@id/anim_text"
+            android:id="@+id/iv_anim_image"
+            android:layout_toStartOf="@id/iv_anim_text"
             android:layout_width="25dp"
             android:layout_height="20dp"
             android:padding="1dp"
@@ -17,7 +17,7 @@
     <TextView
             android:layout_marginTop="20dp"
             android:layout_marginBottom="20dp"
-            android:id="@+id/anim_text"
+            android:id="@+id/iv_anim_text"
             android:layout_centerHorizontal="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
