--- a/app/src/main/res/layout/recycle_item_fragment_mv_rank.xml
+++ b/app/src/main/res/layout/recycle_item_fragment_mv_rank.xml
@@ -20,17 +20,24 @@
     <TextView
             android:id="@+id/tv_number"
             android:layout_below="@id/cd_cover"
-            android:layout_alignParentStart="true"
+            android:layout_alignStart="@id/cd_cover"
+            android:textSize="21sp"
+            android:layout_marginStart="5dp"
+            android:textStyle="bold"
+            android:layout_marginTop="15dp"
+            android:layout_marginBottom="15dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 
     <TextView
             android:id="@+id/tv_mv_title"
-            android:layout_marginTop="15dp"
-            android:layout_alignStart="@id/tv_number"
+            android:layout_toEndOf="@id/tv_number"
             android:layout_below="@id/cd_cover"
+            android:layout_marginTop="2dp"
+            android:layout_alignEnd="@id/cd_cover"
+            android:layout_marginStart="20dp"
+            android:layout_alignTop="@id/tv_number"
             android:textColor="@color/text_common_black"
-            android:layout_marginStart="21dp"
             android:textSize="18sp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
