--- a/app/src/main/res/layout/activity_song_list.xml
+++ b/app/src/main/res/layout/activity_song_list.xml
@@ -6,7 +6,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        tools:context=".view.activity.SongListActivity">
+        tools:context=".view.songlist.SongListActivity">
     <include layout="@layout/toolbar_common"/>
 
 
